Small content and link fixes

--- a/docs/sql/sfmc-sql-from.mdx
+++ b/docs/sql/sfmc-sql-from.mdx
@@ -9,7 +9,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Tell the SQL query FROM where you need the data' />
 
-The [`SELECT`](sfmc-sql-select.mdx) statement alone won't do anything. Once you have selected columns you want to work with, you also need to pick the table (Data Extension or System Data View) `FROM` which the query will take the right columns. The code for this is simple:
+The [`SELECT`](sfmc-sql-select) statement alone won't do anything. Once you have selected columns you want to work with, you also need to pick the table (Data Extension or System Data View) `FROM` which the query will take the right columns. The code for this is simple:
 
 ```sql {4} title="Get ContactKey and EmailAddress from Data Extension named MasterSubscriberDE"
 SELECT
@@ -31,7 +31,7 @@ There are, however, two cases, specific to Salesforce Marketing Cloud, that adds
 
 ## System Data Views
 
-Salesforce Marketing Cloud is partially hiding the [System Data Views](sfmc-sql-system-data-views.mdx) Data Extensions that store tracking data. Think about Email Sent history, Opens and Clicks, Bounces and Complaints. You can find there also tracking data for SMS and Social channels. Also, more technical data points, like Jobs and Enterprise Attributes, are using System Data Views. The difference related to those tables is in naming convention. When querying them, you must leverage `_` prefix:
+Salesforce Marketing Cloud is partially hiding the [System Data Views](sfmc-sql-system-data-views.mdx) Data Extensions that store tracking data. Think about Email Sent history, Opens and Clicks, Bounces and Complaints. You can find there tracking data for SMS and Social channels. Also, more technical data points, like Jobs and Enterprise Attributes, are available in the System Data Views. You won't find them in the User Interface but can query them with the SQL. The difference related to those tables is in naming convention. When querying them, you must leverage `_` prefix:
 
 ```sql {8}
 SELECT
