Updated content structure to separate early drafts from production content

--- a/drafts/sql/sfmc-sql-system-data-views.mdx
+++ b/drafts/sql/sfmc-sql-system-data-views.mdx
@@ -1,11 +1,12 @@
 ---
 id: sfmc-sql-system-data-views
 title: System Data Views
+draft: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='' />
+<LeadText content='Writing in Progress' />
 
 2. For queries involving data views, implement a 6-month cap. Often the performance is dramatically better limited to no more than 30 days.
 
