--- a/drafts/sql/sfmc-sql-functions.mdx
+++ b/drafts/sql/sfmc-sql-functions.mdx
@@ -1,13 +1,14 @@
 ---
 id: sfmc-sql-functions
 title: SFMC SQL Functions
-sidebar_label: SQL Functions
-description:
+sidebar_label: Functions
+description: Writing in Progress
+draft: true
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='' />
+<LeadText content='Writing in Progress' />
 
 MIN, MAX, CAST, CONVERT
 
