Updated frontmatter for JS/SSJS articles to improve algolia search

--- a/docs/js/js-if-and-switch.mdx
+++ b/docs/js/js-if-and-switch.mdx
@@ -1,6 +1,7 @@
 ---
 id: js-if-and-switch
-title: If & Switch
+title: JS If & Switch
+sidebar_label: If & Switch
 description: Deep dive into the two pillars of JavaScript flow control
 ---
 
