--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -1,6 +1,7 @@
 ---
 id: js-loops
-title: Loops
+title: JS Loops
+sidebar_label: Loops
 description: JavaScript offers four for loops and two while loops. What's the difference?
 ---
 
