--- a/docs/ssjs/debugging-ssjs.mdx
+++ b/docs/ssjs/debugging-ssjs.mdx
@@ -1,6 +1,7 @@
 ---
 id: debugging-ssjs
-title: Debugging & Error Handling
+title: SSJS Debugging & Error Handling
+sidebar_label: Debugging & Error Handling
 description: To catch, or not to catch, that is debugging
 ---
 
