--- a/docs/ssjs/ssjs-if-and-switch.mdx
+++ b/docs/ssjs/ssjs-if-and-switch.mdx
@@ -1,6 +1,7 @@
 ---
 id: ssjs-if-and-switch
-title: If & Switch
+title: SSJS If & Switch
+sidebar_label: If & Switch
 description: Deep dive into the two pillars of SSJS flow control
 ---
 
