--- a/drafts/js/js-map-filter-find-reduce.mdx
+++ b/drafts/js/js-map-filter-find-reduce.mdx
@@ -1,6 +1,7 @@
 ---
 id: js-map-filter-find-reduce
-title: Map, Filter, Find, Reduce
+title: JS Map, Filter, Find, Reduce
+sidebar_label: Map, Filter, Find, Reduce
 draft: true
 ---
 
